# wasm-tetris

./: .gitignore  0.index.js  1.index.js  Cargo.toml  LICENSE  README.md  build.sh  index.html  index.js  package-lock.json  package.json  wasm-tetris.js  wasm-tetris.wasm  web.toml  webpack.config.js
examples/: index.html
pkg/: README.md  package.json  wasm_tetris.d.ts  wasm_tetris.js  wasm_tetris_bg.d.ts  wasm_tetris_bg.wasm
src/: lib.rs  main.rs
static/: index.html
