[package]
name = "wasm-tetris"
version = "0.1.0"
authors = ["axu <axu701@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.6"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'EventListener',
  'EventTarget',
  'KeyboardEvent',
  'UiEvent',
  'Performance'
]