[package]
name = "wasm_tetris"
version = "2.0.1"
authors = ["axu <axu701@gmail.com>"]
edition = "2018"
description = "Tetris game WebAssembly demo"
repository = "https://github.com/xuu/wasm-tetris"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.37"
js-sys = "0.3.6"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'EventListener',
  'EventTarget',
  'KeyboardEvent',
  'UiEvent',
  'Performance'
]